# sketch_map_matching

./: .gitignore  CMakeLists.txt  README.md  sketchalgorithm-config.cmake
Test/BaseTest/: CMakeLists.txt  Dani.cpp  Voronoi_test.cpp  graphtest.cpp  laplacetest.cpp  line_follower.cpp  mapimport.cpp  test_EVG.cpp  test_anchor.cpp  test_cluster.cpp  test_comparisor.cpp  test_delaunay.cpp  test_extractor.cpp  test_graphline.cpp  test_line_doors.cpp  test_multilline.cpp  test_place.cpp  test_randomgraph.cpp  test_randomgraph_vfl.cpp  test_real_comparison.cpp  test_scale_space.cpp  test_think_voronoi_valgrind.cpp  test_updateEditDistance.cpp  test_virtualenv.cpp
Test/BaseTest/TEST_COMPARISON/Malcolm/Images/: lab_occ.pgm  map2bw.pgm  map_RiccardoFreiburg_05m.pgm  map_RiccardoFreiburg_1m.pgm  map_RiccardoFreiburg_1m2.pgm  map_RiccardoFreiburg_1m2.yaml  mapbw.pgm  my_map.pgm  testmap10.pgm
Test/BaseTest/TEST_COMPARISON/Malcolm/maps/: result.pgm
Test/BaseTest/TEST_COMPARISON/TEST1/map/: obstacles.txt
Test/BaseTest/TEST_COMPARISON/TEST1/model/: obstacles.txt
Test/BaseTest/TEST_COMPARISON/TEST2/map/: map.pgm  map_model_cut.pgm  map_model_cut_more.pgm
Test/BaseTest/TEST_COMPARISON/TEST2/model/: model.pgm  model_cut.pgm
Test/BaseTest/TEST_COMPARISON/TEST3/map/: map.pgm
Test/BaseTest/TEST_COMPARISON/TEST3/model/: model.pgm
Test/DanielData/: graph_a.h  graph_ab.h  graph_b.h
Test/GraphDB/: graphdb.cpp  si2_m2D_s16_00.grf  si2_m2D_s16_00.sub.grf  si2_m2D_s36_00.grf  si2_m2D_s36_00.sub.grf  simulation_corridor.cpp  simulation_easy.cpp  simulation_intel.cpp  simulation_kth.cpp  simulation_taurob.cpp  sketchVSsketch.cpp  slam_images.cpp  test_graphdb.cpp
Test/GraphDB/DB/iso/m2D/m2Dr6/: iso_m2Dr6_m1024.A00  iso_m2Dr6_m1024.A01  iso_m2Dr6_m1024.A02  iso_m2Dr6_m1024.A03  iso_m2Dr6_m1024.A04  iso_m2Dr6_m1024.A05  iso_m2Dr6_m1024.A06  iso_m2Dr6_m1024.A07  iso_m2Dr6_m1024.A08  iso_m2Dr6_m1024.A09  iso_m2Dr6_m1024.A10  iso_m2Dr6_m1024.A11  iso_m2Dr6_m1024.A12  iso_m2Dr6_m1024.A13  iso_m2Dr6_m1024.A14  iso_m2Dr6_m1024.A15  iso_m2Dr6_m1024.A16  iso_m2Dr6_m1024.A17  iso_m2Dr6_m1024.A18  iso_m2Dr6_m1024.A19  iso_m2Dr6_m1024.A20  iso_m2Dr6_m1024.A21  iso_m2Dr6_m1024.A22  iso_m2Dr6_m1024.A23  iso_m2Dr6_m1024.A24  iso_m2Dr6_m1024.A25  iso_m2Dr6_m1024.A26  iso_m2Dr6_m1024.A27  iso_m2Dr6_m1024.A28  iso_m2Dr6_m1024.A29  iso_m2Dr6_m1024.A30  iso_m2Dr6_m1024.A31  iso_m2Dr6_m1024.A32  iso_m2Dr6_m1024.A33  iso_m2Dr6_m1024.A34  iso_m2Dr6_m1024.A35  iso_m2Dr6_m1024.A36  (+1963 more)
Test/GraphDB/Sketches/Easy/User_groudntruth/: 01_partial.pgm  02_partial.pgm  03_partial.pgm  04_partial.pgm  05_partial.pgm  06_partial.pgm  07_partial.pgm  08_partial.pgm  09_partial.pgm  10_partial.pgm
Test/GraphDB/Sketches/Easy/User_groudntruth_EVG/: 01_partialEVG.pgm  02_partialEVG.pgm  03_partialEVG.pgm  04_partialEVG.pgm  05_partialEVG.pgm  06_partialEVG.pgm  07_partialEVG.pgm  08_partialEVG.pgm  09_partialEVG.pgm  10_partialEVG.pgm
Test/GraphDB/Sketches/KTH/User_Groundtruth/: 00_partial.pgm  01_partial.pgm  02_partial.pgm  03_partial.pgm  04_partial.pgm  05_partial.pgm  06_partial.pgm  07_partial.pgm  08_partial.pgm  09_partial.pgm  10_partial.pgm  11_partial.pgm  12_partial.pgm  13_partial.pgm
Test/GraphDB/Sketches/KTH/User_Groundtruth_EVG/: 00_partialEVG.pgm  01_partialEVG.pgm  02_partialEVG.pgm  03_partialEVG.pgm  04_partialEVG.pgm  05_partialEVG.pgm  06_partialEVG.pgm  07_partialEVG.pgm  08_partialEVG.pgm  09_partialEVG.pgm  10_partialEVG.pgm  11_partialEVG.pgm  12_partialEVG.pgm  13_partialEVG.pgm  15_partialEVG.pgm
Test/GraphDB/VFLcomp/: vfl_comp.cpp
Test/Probabilities/: standard_test_iso.cpp  test_anchor_finding.cpp  test_bigger_graph.cpp  test_catch.cpp  test_hypoproba.cpp  test_nd.cpp  test_proba_time.cpp  test_randomgraph_proba.cpp  test_real_proba.cpp  test_table.cpp  test_variance.cpp  test_zonesame.cpp
Test/RSI/: CMakeLists.txt  match_anchors.cpp  test_conversion.cpp  test_hungarian.cpp  test_laplacian.cpp  test_shjared_ptr.cpp  test_vfl.cpp
Test/RSI/Evaluation/: CMakeLists.txt  CreateHypFromGT.hpp  CreateHypFromSaeed.hpp  Evaluation.hpp  MatchMaps.hpp  create_all_gt.cpp  create_correspondences.cpp  create_gt_from_model.cpp  evaluate.cpp  evaluate_final_strategy.cpp  evaluate_find_time.cpp  evaluate_multple_times.cpp  evaluate_threshold.cpp  read_from_file.cpp  test_affine_transformation.cpp  vfl_utils_evaluation.hpp
Test/RSI/test_affine/: E5_11.txt
Test/Simulation/FromVirtual/Gael/: obstacles.txt
includes/: CMakeLists.txt
includes/Conversion/: CMakeLists.txt  RSIConversion.hpp
includes/LaplacianGraphMatching/: CMakeLists.txt  GraphLaplacian.cpp  GraphLaplacian.hpp  GraphMatcherBaseLaplacian.cpp  GraphMatcherBaseLaplacian.hpp  GraphMatcherNeighborLaplacian.cpp  GraphMatcherNeighborLaplacian.hpp  HypotheseLaplacian.cpp  HypotheseLaplacian.hpp  MatchLaplacian.hpp
includes/MapComparator/: CMakeLists.txt  Cluster.cpp  Cluster.hpp  Gateway.hpp  GlobalMatch.hpp  GraphMatcherAnchor.cpp  GraphMatcherAnchor.hpp  GraphMatcherBase.cpp  GraphMatcherBase.hpp  GraphMatcherClusterFiltered.cpp  GraphMatcherClusterFiltered.hpp  GraphMatcherNeighbor.cpp  GraphMatcherNeighbor.hpp  GraphMatcherOld.cpp  GraphMatcherOld.hpp  GraphPlace.hpp  Hypothese.cpp  Hypothese.hpp  Init.cpp  Init.hpp  Match.hpp  MatchingFunctions.hpp  Place.hpp  PlaceExtractorBase.hpp  PlaceExtractorDoors.hpp  PlaceExtractorList2Place.hpp  PlaceExtractorRoomCorner.hpp  StorageFilter.cpp  StorageFilter.hpp  Util.hpp
includes/MapComparator/Keypoints/: CMakeLists.txt  JunctionAndDeadEnds.hpp  Keypoint.hpp  RoomAndCorner.hpp
includes/ProbabilisticMethod/: BaseProba.hpp  CMakeLists.txt  GraphProba.hpp  GraphProbaEdge.hpp  PFEdgeNumber.hpp  PFFUUEdgeNumber.hpp  ProbabilisticEditDistanceEdge.cpp  ProbabilisticEditDistanceEdge.hpp  Util.hpp  VarianceEdgeNumber.hpp
includes/TopologicalMap/: CMakeLists.txt  GraphLine.hpp
includes/VFLConversion/: CMakeLists.txt  ConversionVFL.hpp  GraphDB.hpp  GraphVFLLabeled.hpp  Timed.hpp  VFLPrint.hpp  VFLVisitor.hpp  VFLwrapper.hpp
src/LaplacianGraphMatching/: CMakeLists.txt  GraphLaplacian.cpp
(+38 files in other folders)
